erDiagram
    User ||--o{ Event : organizes
    User }o--o{ Event : attends
    
    User {
        string user_id PK
        string username
        string full_name
        string email
        string role
    }
    
    Event {
        string event_id PK
        string name
        string description
        date date
        time time
        string location
        int max_capacity
        string organizer_id FK
        list attendees
    }
    
    Admin ||--o{ Event : "creates/updates/deletes"
    EventOrganizer ||--o{ Event : "manages assigned events"
    Student }o--o{ Event : "registers for events"
    Visitor }o--o{ Event : "registers for events"
    
    Admin {
        string user_id PK
        string role "Admin"
    }
    
    EventOrganizer {
        string user_id PK
        string role "EventOrganizer"
    }
    
    Student {
        string user_id PK
        string role "Student"
    }
    
    Visitor {
        string user_id PK
        string role "Visitor"
    }
    
    Event ||--o{ Statistics : generates
    Event ||--o{ Reports : "included in"
    
    Statistics {
        int total_events
        int total_attendees
        float average_attendance
        string most_popular_event
        string least_popular_event
        dict role_distribution
        dict organizer_performance
    }
    
    Reports {
        string filename
        string format
        datetime generated_at
        string report_type
        dict content
    }